--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "log-harvestor-web",
   "description": "The web script for Log Harvestor",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "contributors": [
     {
       "name": "Solomon Bush",
@@ -11,19 +11,22 @@
   ],
   "author": "solomon@logharvestor.com",
   "license": "ISC",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
-  },
-  "dependencies": {
-    "axios": "^1.3.6",
-    "log-harvestor-node": "^2.0.2",
-    "uuid": "^9.0.0"
+    "build": "tsup",
+    "build:t": "tsc",
+    "test": "vitest"
   },
   "devDependencies": {
+    "@types/node": "^18.16.1",
     "@types/uuid": "^9.0.1",
-    "typescript": "^4.8.2"
+    "jsdom": "^21.1.1",
+    "terser": "^5.17.1",
+    "tsup": "^6.7.0",
+    "typescript": "^4.8.2",
+    "vitest": "^0.30.1"
   },
   "files": [
     "dist",
