--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "author": "solomon@logharvestor.com",
   "license": "ISC",
+  "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
