--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   ],
   "author": "solomon@logharvestor.com",
   "license": "ISC",
-  "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,14 +18,12 @@
     "build": "tsup",
     "test": "vitest"
   },
-  "dependencies": {
-    "terser": "^5.17.1",
-    "tsup": "^6.7.0"
-  },
   "devDependencies": {
     "@types/node": "^18.16.1",
     "@types/uuid": "^9.0.1",
     "jsdom": "^21.1.1",
+    "terser": "^5.17.1",
+    "tsup": "^6.7.0",
     "typescript": "^4.8.2",
     "vitest": "^0.30.1"
   },
