--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "log-harvestor-web",
   "description": "The web script for Log Harvestor",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "contributors": [
     {
       "name": "Solomon Bush",
@@ -11,7 +11,7 @@
   ],
   "author": "solomon@logharvestor.com",
   "license": "ISC",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
